Created css grid for images

--- a/pokedex.html
+++ b/pokedex.html
@@ -7,34 +7,145 @@
     <meta name="author" content="Jaskanwar Randhawa">
     <link rel="stylesheet" href="stylesheet.css">
 </head>
+
 <body>
 <!-- Place your content here -->
 <h1>POKEDEX</h1>
 <p>SEARCH THE POKEDEX</p>
-
-<div class="row">
-    <div class="column">
-        <img src="images/1.png" style="width:100%">
-        <p>SEARCH THE POKEDEX</p>
-    </div>
-    <div class="column">
-        <img src="images/2.png" style="width:100%">
-    </div>
-    <div class="column">
-        <img src="images/3.png" style="width:100%">
-    </div>
-</div>
-<div class="row">
-    <div class="column">
-        <img src="images/1.png" style="width:100%">
-    </div>
-    <div class="column">
-        <img src="images/2.png" style="width:100%">
-    </div>
-    <div class="column">
-        <img src="images/3.png" style="width:100%">
-    </div>
-</div>
+<ul>
+    <li>
+        <img src="images/1.png">
+        <p>
+            NAME
+        </p>
+        <p>
+            Number
+        </p>
+        <p>
+            Description
+        </p>
+    </li>
+    <li>
+        <img src="images/2.png">
+        <p>
+            NAME
+        </p>
+        <p>
+            Number
+        </p>
+        <p>
+            Description
+        </p>
+    </li>
+    <li>
+        <img src="images/3.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/4.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/5.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/6.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/7.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/8.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/9.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/10.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/11.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/12.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/13.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/14.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/15.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/16.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/17.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/18.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/19.png">
+        <p>
+            NAME
+        </p>
+    </li>
+    <li>
+        <img src="images/20.png">
+        <p>
+            NAME
+        </p>
+    </li>
+</ul>
 
 
 <!-- Embedded JavaScript go here -->
