Assigned names, numbers, and desciptions.

--- a/pokedex.html
+++ b/pokedex.html
@@ -11,138 +11,248 @@
 <body>
 <!-- Place your content here -->
 <h1>POKEDEX</h1>
-<p>SEARCH THE POKEDEX</p>
+<h4>SEARCH THE POKEDEX</h4>
 <ul>
     <li>
         <img src="images/1.png">
         <p>
-            NAME
+            Bulbasaur
         </p>
         <p>
-            Number
+            #001
         </p>
         <p>
-            Description
+            There is a plant seed on its back right from the day this Pokémon is born.
+            The seed slowly grows larger.
         </p>
     </li>
     <li>
         <img src="images/2.png">
         <p>
-            NAME
+            Ivysaur
         </p>
         <p>
-            Number
+            #002
         </p>
         <p>
-            Description
+            When the bulb on its back grows large, it appears to lose the ability to stand on its hind legs.
         </p>
     </li>
     <li>
         <img src="images/3.png">
         <p>
-            NAME
+            Venusaur
+        </p>
+        <p>
+            #003
+        </p>
+        <p>
+            Its plant blooms when it is absorbing solar energy. It stays on the move to seek sunlight.
         </p>
     </li>
     <li>
         <img src="images/4.png">
         <p>
-            NAME
+            Charmander
+        </p>
+        <p>
+            #004
+        </p>
+        <p>
+            It has a preference for hot things. When it rains, steam is said to spout from the tip of its tail.
         </p>
     </li>
     <li>
         <img src="images/5.png">
         <p>
-            NAME
+            Charmeleon
+        </p>
+        <p>
+            #005
+        </p>
+        <p>
+            It has a barbaric nature. In battle, it whips its fiery tail around and slashes away with sharp claws.
         </p>
     </li>
     <li>
         <img src="images/6.png">
         <p>
-            NAME
+            Charizard
+        </p>
+        <p>
+            #006
+        </p>
+        <p>
+            It spits fire that is hot enough to melt boulders. It may cause forest fires by blowing flames.
         </p>
     </li>
     <li>
         <img src="images/7.png">
         <p>
-            NAME
+            Squirtle
+        </p>
+        <p>
+            #007
+        </p>
+        <p>
+            When it retracts its long neck into its shell, it squirts out water with vigorous force.
         </p>
     </li>
     <li>
-        <img src="images/8.png">
+        <img src="images/8.png" alt="Wartortle">
         <p>
-            NAME
+            Wartortle
+        </p>
+        <p>
+            #008
+        </p>
+        <p>
+            It is recognized as a symbol of longevity. If its shell has algae on it, that Wartortle is very old.
         </p>
     </li>
     <li>
         <img src="images/9.png">
         <p>
-            NAME
+            Blastoise
+        </p>
+        <p>
+            #009
+        </p>
+        <p>
+            It crushes its foe under its heavy body to cause fainting. In a pinch, it will withdraw inside its shell.
         </p>
     </li>
     <li>
         <img src="images/10.png">
         <p>
-            NAME
+            Caterpie
+        </p>
+        <p>
+            #010
+        </p>
+        <p>
+            For protection, it releases a horrible stench from the antenna on its head to drive away enemies.
         </p>
     </li>
     <li>
         <img src="images/11.png">
         <p>
-            NAME
+            Metapod
+        </p>
+        <p>
+            #011
+        </p>
+        <p>
+            It is waiting for the moment to evolve. At this stage, it can only harden,
+            so it remains motionless to avoid attack.
         </p>
     </li>
     <li>
         <img src="images/12.png">
         <p>
-            NAME
+            Butterfree
+        </p>
+        <p>
+            #012
+        </p>
+        <p>
+            In battle, it flaps its wings at great speed to release highly toxic dust into the air.
         </p>
     </li>
     <li>
         <img src="images/13.png">
         <p>
-            NAME
+            Weedle
+        </p>
+        <p>
+            #013
+        </p>
+        <p>
+            Beware of the sharp stinger on its head. It hides in grass and bushes where it eats leaves.
         </p>
     </li>
     <li>
         <img src="images/14.png">
         <p>
-            NAME
+            Kakuna
+        </p>
+        <p>
+            #014
+        </p>
+        <p>
+            Able to move only slightly. When endangered, it may stick out its stinger and poison its enemy.
         </p>
     </li>
     <li>
         <img src="images/15.png">
         <p>
-            NAME
+            Beedrill
+        </p>
+        <p>
+            #015
+        </p>
+        <p>
+            It has three poisonous stingers on its forelegs and its tail. They are used to jab its enemy repeatedly.
         </p>
     </li>
     <li>
         <img src="images/16.png">
         <p>
-            NAME
+            Pidgey
+        </p>
+        <p>
+            #016
+        </p>
+        <p>
+            Very docile. If attacked, it will often kick up sand to protect itself rather than fight back.
         </p>
     </li>
     <li>
         <img src="images/17.png">
         <p>
-            NAME
+            Pidgeotto
+        </p>
+        <p>
+            #017
+        </p>
+        <p>
+            This Pokémon is full of vitality. It constantly flies around its large territory in search of prey.
         </p>
     </li>
     <li>
         <img src="images/18.png">
         <p>
-            NAME
+            Pidgeot
+        </p>
+        <p>
+            #018
+        </p>
+        <p>
+            This Pokémon flies at Mach 2 speed, seeking prey. Its large talons are feared as wicked weapons.
         </p>
     </li>
     <li>
         <img src="images/19.png">
         <p>
-            NAME
+            Rattata
+        </p>
+        <p>
+            #019
+        </p>
+        <p>
+            Will chew on anything with its fangs. If you see one, you can be certain that 40 more live in the area.
         </p>
     </li>
     <li>
         <img src="images/20.png">
         <p>
-            NAME
+            Raticate
+        </p>
+        <p>
+            #020
+        </p>
+        <p>
+            Its hind feet are webbed. They act as flippers, so it can swim in rivers and hunt for prey.
         </p>
     </li>
 </ul>
