Implemented pokemon number search.

--- a/pokedex.html
+++ b/pokedex.html
@@ -13,7 +13,9 @@
 <!-- Place your content here -->
 <h1>POKEDEX</h1>
 
+<input type="number" min="0" max="20" id="numSearch" onkeyup="numSearch()" placeholder="Search Pokemon numbers">
 <input type="text" id="nameSearch" onkeyup="nameSearch()" placeholder="Search Pokemon names">
+
 
 <ul id="myUL">
     <li>
@@ -82,9 +84,9 @@
         <a>
             Charizard
         </a>
-        <p>
+        <c>
             #006
-        </p>
+        </c>
         <p>
             It spits fire that is hot enough to melt boulders. It may cause forest fires by blowing flames.
         </p>
@@ -94,9 +96,9 @@
         <a>
             Squirtle
         </a>
-        <p>
+        <c>
             #007
-        </p>
+        </c>
         <p>
             When it retracts its long neck into its shell, it squirts out water with vigorous force.
         </p>
@@ -106,9 +108,9 @@
         <a>
             Wartortle
         </a>
-        <p>
+        <c>
             #008
-        </p>
+        </c>
         <p>
             It is recognized as a symbol of longevity. If its shell has algae on it, that Wartortle is very old.
         </p>
@@ -118,9 +120,9 @@
         <a>
             Blastoise
         </a>
-        <p>
+        <c>
             #009
-        </p>
+        </c>
         <p>
             It crushes its foe under its heavy body to cause fainting. In a pinch, it will withdraw inside its shell.
         </p>
@@ -130,9 +132,9 @@
         <a>
             Caterpie
         </a>
-        <p>
+        <c>
             #010
-        </p>
+        </c>
         <p>
             For protection, it releases a horrible stench from the antenna on its head to drive away enemies.
         </p>
@@ -142,9 +144,9 @@
         <a>
             Metapod
         </a>
-        <p>
+        <c>
             #011
-        </p>
+        </c>
         <p>
             It is waiting for the moment to evolve. At this stage, it can only harden,
             so it remains motionless to avoid attack.
@@ -155,9 +157,9 @@
         <a>
             Butterfree
         </a>
-        <p>
+        <c>
             #012
-        </p>
+        </c>
         <p>
             In battle, it flaps its wings at great speed to release highly toxic dust into the air.
         </p>
@@ -167,9 +169,9 @@
         <a>
             Weedle
         </a>
-        <p>
+        <c>
             #013
-        </p>
+        </c>
         <p>
             Beware of the sharp stinger on its head. It hides in grass and bushes where it eats leaves.
         </p>
@@ -179,9 +181,9 @@
         <a>
             Kakuna
         </a>
-        <p>
+        <c>
             #014
-        </p>
+        </c>
         <p>
             Able to move only slightly. When endangered, it may stick out its stinger and poison its enemy.
         </p>
@@ -191,9 +193,9 @@
         <a>
             Beedrill
         </a>
-        <p>
+        <c>
             #015
-        </p>
+        </c>
         <p>
             It has three poisonous stingers on its forelegs and its tail. They are used to jab its enemy repeatedly.
         </p>
@@ -203,9 +205,9 @@
         <a>
             Pidgey
         </a>
-        <p>
+        <c>
             #016
-        </p>
+        </c>
         <p>
             Very docile. If attacked, it will often kick up sand to protect itself rather than fight back.
         </p>
@@ -215,9 +217,9 @@
         <a>
             Pidgeotto
         </a>
-        <p>
+        <c>
             #017
-        </p>
+        </c>
         <p>
             This Pokémon is full of vitality. It constantly flies around its large territory in search of prey.
         </p>
@@ -227,9 +229,9 @@
         <a>
             Pidgeot
         </a>
-        <p>
+        <c>
             #018
-        </p>
+        </c>
         <p>
             This Pokémon flies at Mach 2 speed, seeking prey. Its large talons are feared as wicked weapons.
         </p>
@@ -239,9 +241,9 @@
         <a>
             Rattata
         </a>
-        <p>
+        <c>
             #019
-        </p>
+        </c>
         <p>
             Will chew on anything with its fangs. If you see one, you can be certain that 40 more live in the area.
         </p>
@@ -251,9 +253,9 @@
         <a>
             Raticate
         </a>
-        <p>
+        <c>
             #020
-        </p>
+        </c>
         <p>
             Its hind feet are webbed. They act as flippers, so it can swim in rivers and hunt for prey.
         </p>
