--- a/index.html
+++ b/index.html
@@ -266,6 +266,13 @@
     </li>
 </ul>
 
+<div class="footer">
+    <p> Sources: </p>
+    <p> https://www.pokemon.com/us/pokedex/ </p>
+
+</div>
+
+
 
 <!-- Embedded JavaScript go here -->
 </body>
