--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>SE 3316 Lab 1</title>
@@ -25,9 +25,9 @@
         <a>
             Bulbasaur
         </a>
-        <c>
+        <p class="c">
             #001
-        </c>
+        </p>
         <p>
             There is a plant seed on its back right from the day this Pokémon is born.
             The seed slowly grows larger.
@@ -38,9 +38,9 @@
         <a>
             Ivysaur
         </a>
-        <c>
+        <p class="c">
             #002
-        </c>
+        </p>
         <p>
             When the bulb on its back grows large, it appears to lose the ability to stand on its hind legs.
         </p>
@@ -50,9 +50,9 @@
         <a>
             Venusaur
         </a>
-        <c>
+        <p class="c">
             #003
-        </c>
+        </p>
         <p>
             Its plant blooms when it is absorbing solar energy. It stays on the move to seek sunlight.
         </p>
@@ -62,9 +62,9 @@
         <a>
             Charmander
         </a>
-        <c>
+        <p class="c">
             #004
-        </c>
+        </p>
         <p>
             It has a preference for hot things. When it rains, steam is said to spout from the tip of its tail.
         </p>
@@ -74,9 +74,9 @@
         <a>
             Charmeleon
         </a>
-        <c>
+        <p class="c">
             #005
-        </c>
+        </p>
         <p>
             It has a barbaric nature. In battle, it whips its fiery tail around and slashes away with sharp claws.
         </p>
@@ -86,9 +86,9 @@
         <a>
             Charizard
         </a>
-        <c>
+        <p class="c">
             #006
-        </c>
+        </p>
         <p>
             It spits fire that is hot enough to melt boulders. It may cause forest fires by blowing flames.
         </p>
@@ -98,9 +98,9 @@
         <a>
             Squirtle
         </a>
-        <c>
+        <p class="c">
             #007
-        </c>
+        </p>
         <p>
             When it retracts its long neck into its shell, it squirts out water with vigorous force.
         </p>
@@ -110,9 +110,9 @@
         <a>
             Wartortle
         </a>
-        <c>
+        <p class="c">
             #008
-        </c>
+        </p>
         <p>
             It is recognized as a symbol of longevity. If its shell has algae on it, that Wartortle is very old.
         </p>
@@ -122,9 +122,9 @@
         <a>
             Blastoise
         </a>
-        <c>
+        <p class="c">
             #009
-        </c>
+        </p>
         <p>
             It crushes its foe under its heavy body to cause fainting. In a pinch, it will withdraw inside its shell.
         </p>
@@ -134,9 +134,9 @@
         <a>
             Caterpie
         </a>
-        <c>
+        <p class="c">
             #010
-        </c>
+        </p>
         <p>
             For protection, it releases a horrible stench from the antenna on its head to drive away enemies.
         </p>
@@ -146,9 +146,9 @@
         <a>
             Metapod
         </a>
-        <c>
+        <p class="c">
             #011
-        </c>
+        </p>
         <p>
             It is waiting for the moment to evolve. At this stage, it can only harden,
             so it remains motionless to avoid attack.
@@ -159,9 +159,9 @@
         <a>
             Butterfree
         </a>
-        <c>
+        <p class="c">
             #012
-        </c>
+        </p>
         <p>
             In battle, it flaps its wings at great speed to release highly toxic dust into the air.
         </p>
@@ -171,9 +171,9 @@
         <a>
             Weedle
         </a>
-        <c>
+        <p class="c">
             #013
-        </c>
+        </p>
         <p>
             Beware of the sharp stinger on its head. It hides in grass and bushes where it eats leaves.
         </p>
@@ -183,9 +183,9 @@
         <a>
             Kakuna
         </a>
-        <c>
+        <p class="c">
             #014
-        </c>
+        </p>
         <p>
             Able to move only slightly. When endangered, it may stick out its stinger and poison its enemy.
         </p>
@@ -195,9 +195,9 @@
         <a>
             Beedrill
         </a>
-        <c>
+        <p class="c">
             #015
-        </c>
+        </p>
         <p>
             It has three poisonous stingers on its forelegs and its tail. They are used to jab its enemy repeatedly.
         </p>
@@ -207,9 +207,9 @@
         <a>
             Pidgey
         </a>
-        <c>
+        <p class="c">
             #016
-        </c>
+        </p>
         <p>
             Very docile. If attacked, it will often kick up sand to protect itself rather than fight back.
         </p>
@@ -219,9 +219,9 @@
         <a>
             Pidgeotto
         </a>
-        <c>
+        <p class="c">
             #017
-        </c>
+        </p>
         <p>
             This Pokémon is full of vitality. It constantly flies around its large territory in search of prey.
         </p>
@@ -231,9 +231,9 @@
         <a>
             Pidgeot
         </a>
-        <c>
+        <p class="c">
             #018
-        </c>
+        </p>
         <p>
             This Pokémon flies at Mach 2 speed, seeking prey. Its large talons are feared as wicked weapons.
         </p>
@@ -243,9 +243,9 @@
         <a>
             Rattata
         </a>
-        <c>
+        <p class="c">
             #019
-        </c>
+        </p>
         <p>
             Will chew on anything with its fangs. If you see one, you can be certain that 40 more live in the area.
         </p>
@@ -255,9 +255,9 @@
         <a>
             Raticate
         </a>
-        <c>
+        <p class="c">
             #020
-        </c>
+        </p>
         <p>
             Its hind feet are webbed. They act as flippers, so it can swim in rivers and hunt for prey.
         </p>
