Checked and fixed validation errors.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <ul id="myUL">
     <li>
         <img src="images/1.png" alt="Bulbasaur">
-        <a>
+        <p class="a">
             Bulbasaur
-        </a>
+        </p>
         <p class="c">
             #001
         </p>
@@ -34,9 +34,9 @@
     </li>
     <li>
         <img src="images/2.png" alt="Ivysaur">
-        <a>
+        <p class="a">
             Ivysaur
-        </a>
+        </p>
         <p class="c">
             #002
         </p>
@@ -46,9 +46,9 @@
     </li>
     <li>
         <img src="images/3.png" alt="Venusaur">
-        <a>
+        <p class="a">
             Venusaur
-        </a>
+        </p>
         <p class="c">
             #003
         </p>
@@ -58,9 +58,9 @@
     </li>
     <li>
         <img src="images/4.png" alt="Charmander">
-        <a>
+        <p class="a">
             Charmander
-        </a>
+        </p>
         <p class="c">
             #004
         </p>
@@ -70,9 +70,9 @@
     </li>
     <li>
         <img src="images/5.png" alt="Charmeleon">
-        <a>
+        <p class="a">
             Charmeleon
-        </a>
+        </p>
         <p class="c">
             #005
         </p>
@@ -82,9 +82,9 @@
     </li>
     <li>
         <img src="images/6.png" alt="Charizard">
-        <a>
+        <p class="a">
             Charizard
-        </a>
+        </p>
         <p class="c">
             #006
         </p>
@@ -94,9 +94,9 @@
     </li>
     <li>
         <img src="images/7.png" alt="Squirtle">
-        <a>
+        <p class="a">
             Squirtle
-        </a>
+        </p>
         <p class="c">
             #007
         </p>
@@ -106,9 +106,9 @@
     </li>
     <li>
         <img src="images/8.png" alt="Wartortle">
-        <a>
+        <p class="a">
             Wartortle
-        </a>
+        </p>
         <p class="c">
             #008
         </p>
@@ -118,9 +118,9 @@
     </li>
     <li>
         <img src="images/9.png" alt="Blastoise">
-        <a>
+        <p class="a">
             Blastoise
-        </a>
+        </p>
         <p class="c">
             #009
         </p>
@@ -130,9 +130,9 @@
     </li>
     <li>
         <img src="images/10.png" alt="Caterpie">
-        <a>
+        <p class="a">
             Caterpie
-        </a>
+        </p>
         <p class="c">
             #010
         </p>
@@ -142,9 +142,9 @@
     </li>
     <li>
         <img src="images/11.png" alt="Metapod">
-        <a>
+        <p class="a">
             Metapod
-        </a>
+        </p>
         <p class="c">
             #011
         </p>
@@ -155,9 +155,9 @@
     </li>
     <li>
         <img src="images/12.png" alt="Butterfree">
-        <a>
+        <p class="a">
             Butterfree
-        </a>
+        </p>
         <p class="c">
             #012
         </p>
@@ -167,9 +167,9 @@
     </li>
     <li>
         <img src="images/13.png" alt="Weedle">
-        <a>
+        <p class="a">
             Weedle
-        </a>
+        </p>
         <p class="c">
             #013
         </p>
@@ -179,9 +179,9 @@
     </li>
     <li>
         <img src="images/14.png" alt="Kakuna">
-        <a>
+        <p class="a">
             Kakuna
-        </a>
+        </p>
         <p class="c">
             #014
         </p>
@@ -191,9 +191,9 @@
     </li>
     <li>
         <img src="images/15.png" alt="Beedrill">
-        <a>
+        <p class="a">
             Beedrill
-        </a>
+        </p>
         <p class="c">
             #015
         </p>
@@ -203,9 +203,9 @@
     </li>
     <li>
         <img src="images/16.png" alt="Pidgey">
-        <a>
+        <p class="a">
             Pidgey
-        </a>
+        </p>
         <p class="c">
             #016
         </p>
@@ -215,9 +215,9 @@
     </li>
     <li>
         <img src="images/17.png" alt="Pidgeotto">
-        <a>
+        <p class="a">
             Pidgeotto
-        </a>
+        </p>
         <p class="c">
             #017
         </p>
@@ -227,9 +227,9 @@
     </li>
     <li>
         <img src="images/18.png" alt="Pidgeot">
-        <a>
+        <p class="a">
             Pidgeot
-        </a>
+        </p>
         <p class="c">
             #018
         </p>
@@ -239,9 +239,9 @@
     </li>
     <li>
         <img src="images/19.png" alt="Rattata">
-        <a>
+        <p class="a">
             Rattata
-        </a>
+        </p>
         <p class="c">
             #019
         </p>
@@ -251,9 +251,9 @@
     </li>
     <li>
         <img src="images/20.png" alt="Raticate">
-        <a>
+        <p class="a">
             Raticate
-        </a>
+        </p>
         <p class="c">
             #020
         </p>
